fix(news): add scroll if text overflows container

--- a/client/src/styles/custom-scroll.scss
+++ b/client/src/styles/custom-scroll.scss
@@ -356,3 +356,25 @@
 		}
 	}
 }
+
+.news {
+	.ScrollbarsCustom-TrackY {
+		width: 0.25rem;
+		right: 0.125rem;
+	
+		&:hover,
+		&.dragging {
+			width: 0.25rem;
+			right: 0.125rem;
+		}
+	}
+
+	.ScrollbarsCustom-Thumb {
+
+		&:hover,
+		&.dragging {
+			width: initial;
+			background: #fffec5;
+		}
+	}
+}
